JavaScriptCore: When JavaScriptCore calls Debugger::Exception, have it pass a hasHandler variable that represents if exception is being handled in the same function (not in a parent on the call stack).

Reviewed by Tim Hatcher.

This just adds a new parameter, no behavior is changed.

* debugger/Debugger.h:
* interpreter/Interpreter.cpp:
(JSC::Interpreter::throwException):

WebCore: Part of <http://webkit.org/b/28622>.
Caught exceptions still pause the debugger.

Reviewed by Tim Hatcher.

Update JavaScriptDebugServer::exception to take a hasHandler parameter,
so later we can differentiate between a caught and an uncaught exception.

This just adds a new parameter, no behavior is changed.

No change in functionality, so no tests.

* inspector/JavaScriptDebugServer.cpp:
(WebCore::JavaScriptDebugServer::exception):
* inspector/JavaScriptDebugServer.h:

WebKit/mac: Part of <http://webkit.org/b/28622>.
Caught exceptions still pause the debugger.

Reviewed by Tim Hatcher.

Update WebScriptDebugger::exception to have the hasHandler parameter.

This just adds a new parameter, no behavior is changed.

* WebView/WebScriptDebugger.h:
* WebView/WebScriptDebugger.mm:
(WebScriptDebugger::exception):



Canonical link: https://commits.webkit.org/44915@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53516 268f45cc-cd09-0410-ab3c-d52691b4dbfc